# pytest-custom-timeout

./: pyproject.toml  requirements.txt
src/pytest_custom_timeout/: plugin.py
tests/: test_custom_timeout.py  test_pytest_custom_timeout.py
